@@ -8,6 +8,14 @@ import javafx.scene.chart.NumberAxis;
 
 public class StatisticsChartManager {
     private static final int MAX_DATA_POINTS = 100;
+    private static final int X_AXIS_TICK_UNIT = 5;
+    private static final int Y_AXIS_TICK_UNIT = 5;
+    private static final int X_AXIS_LOWER_BOUND = 1;
+    private static final String X_AXIS_LABEL = "Day";
+    private static final String Y_AXIS_LABEL = "Count";
+    private static final String ANIMAL_SERIES_STYLE = "-fx-stroke: #ff7f0e;";
+    private static final String PLANT_SERIES_STYLE = "-fx-stroke: #1f77b4;";
+
     private final LineChart<Number, Number> chart;
     private XYChart.Series<Number, Number> animalSeries;
     private XYChart.Series<Number, Number> plantSeries;
@@ -28,23 +36,23 @@ public class StatisticsChartManager {
             NumberAxis xAxis = (NumberAxis) chart.getXAxis();
             NumberAxis yAxis = (NumberAxis) chart.getYAxis();
 
-            xAxis.setLabel("Day");
-            xAxis.setTickUnit(5);
+            xAxis.setLabel(X_AXIS_LABEL);
+            xAxis.setTickUnit(X_AXIS_TICK_UNIT);
             xAxis.setAutoRanging(false);
             xAxis.setForceZeroInRange(false);
-            xAxis.setLowerBound(1);
+            xAxis.setLowerBound(X_AXIS_LOWER_BOUND);
             xAxis.setUpperBound(MAX_DATA_POINTS);
 
-            yAxis.setLabel("Count");
-            yAxis.setTickUnit(5);
+            yAxis.setLabel(Y_AXIS_LABEL);
+            yAxis.setTickUnit(Y_AXIS_TICK_UNIT);
             yAxis.setAutoRanging(true);
             yAxis.setForceZeroInRange(true);
 
             chart.getData().add(animalSeries);
             chart.getData().add(plantSeries);
 
-            animalSeries.getNode().setStyle("-fx-stroke: #ff7f0e;");
-            plantSeries.getNode().setStyle("-fx-stroke: #1f77b4;");
+            animalSeries.getNode().setStyle(ANIMAL_SERIES_STYLE);
+            plantSeries.getNode().setStyle(PLANT_SERIES_STYLE);
         });
     }
 
@@ -65,15 +73,15 @@ public class StatisticsChartManager {
             plantSeries.getData().add(plantData);
 
             if (animalSeries.getData().size() > MAX_DATA_POINTS) {
-                animalSeries.getData().remove(0);
+                animalSeries.getData().removeFirst();
             }
             if (plantSeries.getData().size() > MAX_DATA_POINTS) {
-                plantSeries.getData().remove(0);
+                plantSeries.getData().removeFirst();
             }
 
             NumberAxis xAxis = (NumberAxis) chart.getXAxis();
             int currentDay = statistics.amountOfDays();
-            int lowerBound = Math.max(1, currentDay - MAX_DATA_POINTS + 1);
+            int lowerBound = Math.max(X_AXIS_LOWER_BOUND, currentDay - MAX_DATA_POINTS + 1);
             xAxis.setLowerBound(lowerBound);
             xAxis.setUpperBound(Math.max(MAX_DATA_POINTS, currentDay + 1));
         });
